--- a/main.html
+++ b/main.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>AccioJob Blog Page</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <!-- Marquee Header -->
+  <marquee><h1>Welcome to Accio Jobs!</h1></marquee>
+
+  <!-- Blog Link -->
+  <a href="https://acciojob.com/blog/" target="_blank">
+    <h1>Accio Job's Blog</h1>
+  </a>
+
+  <!-- Articles Section -->
+  <div class="articles">
+
+    <!-- Article 1 -->
+    <div class="article">
+      <h2>Brute Force vs. Optimization</h2>
+      <a href="https://acciojob.com/blog/brute-force-vs-optimization/" target="_blank">
+        <img 
+          src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" 
+          height="200px" 
+          alt="Brute Force vs Optimization">
+      </a>
+      <p>We can say that optimization is the process of making your solution more efficient...</p>
+    </div>
+
+    <!-- Article 2 -->
+    <div class="article">
+      <h2>DSA vs. Competitive Programming</h2>
+      <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/" target="_blank">
+        <img 
+          src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdGl2ZSUyMHByb2dyYW1taW5nfGVufDB8fHx8MTY3MDk5ODg1NA&ixlib=rb-4.0.3&q=80&w=2000" 
+          height="200px" 
+          alt="DSA vs Competitive Programming">
+      </a>
+      <p>DSA or Competitive programming? Which one should you focus on to land a good job?...</p>
+    </div>
+
+    <!-- Article 3 -->
+    <div class="article">
+      <h2>Complete Guide on FlexBox</h2>
+      <a href="https://acciojob.com/blog/untitled-19/" target="_blank">
+        <img 
+          src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" 
+          height="200px" 
+          alt="Guide on FlexBox">
+      </a>
+      <p>As a job seeker, you may wonder how important CSS Flexbox is in frontend development...</p>
+    </div>
+
+  </div>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
